Fixed mobile portraite layout bug introduced a few commits ago

--- a/assets/extracleanstyle.css
+++ b/assets/extracleanstyle.css
@@ -715,6 +715,9 @@ ul.cardText>li{
     .third{
         width: 100%;
     }
+    #koolwebsites{
+        height: 100vh;
+    }
     .fold-1{
         background-attachment: local;
         height: 100vh;
